--- a/views/client/pages/products/detail.pug
+++ b/views/client/pages/products/detail.pug
@@ -1,30 +1,48 @@
 extends ../../layouts/default.pug
 
 block main
-    .container.my-3
-        .row
-            .col-12
-                
-                if (product.title)
-                    h1(class="mb-4") #{product.title}
-
-    
-                if (product.price)
-                    div(class="mb-4") Giá: <b>#{product.price}$</b>
-                if (product.discountPercentage)
-                    div(class="mb-4") Giảm giá: <b>#{product.discountPercentage}%</b>
-                if (product.stock)
-                    div(class="mb-4") Còn lại: #{product.stock}
-                
-                if (product.thumbnail)
-                    div(class="mb-4") 
-                        img(src=product.thumbnail 
-                            style="width: 100px"
-                            )
-
+  .product-detail
+    .container.my-5
+      .row
+        .col-6
+          .inner-thumb
+            img(src=product.thumbnail, alt=product.title)
+        .col-6
+          h1.inner-title #{product.title}
+          if product.category
+            div.inner-category
+              span Danh mục:
+              a(href=`/products/${product.category.slug}`) #{product.category.title}
+          if product.priceNew
+            div.inner-price-new #{product.priceNew}$
+          if product.price
+            div.inner-price-old #{product.price}$
+          if product.discountPercentage
+            div.inner-percent Giảm tới 
+                span #{product.discountPercentage}%
+          if product.stock
+            div.inner-stock
+                if product.stock > 0
+                    | Còn lại 
+                    span #{product.stock} sản phẩm
+                else
+                    | Hết hàng
             
-                if (product.position)
-                    div(class="mb-4") Vị trí: <b>#{product.position}</b>
-
-                if (product.description) 
-                    div(class="mb-4") #{product.description}
+          form(action=`/cart/add/${product.id}` method="POST")
+            input.form-control.mb-2(
+                type="number",
+                name="quantity",
+                value="1",
+                min="1",
+                max=product.stock || 1, 
+                required
+            )
+            button.btn.btn-success.btn-block(type="submit") Thêm vào giỏ hàng
+        
+  hr
+  
+  .container.my-5
+    .row
+      .col-12
+        h2.box-head Mô tả sản phẩm
+        p.inner-desc !{product.description}
