--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -1,3 +1,4 @@
+include ../mixins/alert.pug
 doctype html
 html(lang="en")
     head
@@ -8,6 +9,7 @@ html(lang="en")
         link(rel="stylesheet", href="/css/test.css")
         title #{pageTitle}
     body 
+        +alert-success(4400)
         include ../partials/header.pug
         block main
         include ../partials/footer.pug
