delete product in cart

--- a/views/client/pages/cart/index.pug
+++ b/views/client/pages/cart/index.pug
@@ -31,7 +31,7 @@ block main
                                     td 
                                         img(src=item.productInfo.thumbnail, alt=item.productInfo.title, width="80px")
                                     td 
-                                        a(href=`/products/detail/:${item.productInfo.slug}`) #{item.productInfo.title}
+                                        a(href=`/products/detail/${item.productInfo.slug}`) #{item.productInfo.title}
                                     td #{item.productInfo.priceNew}$
                                     td 
                                         input(
@@ -44,7 +44,7 @@ block main
                                         )
                                     td #{item.totalPrice}
                                     td 
-                                        a.btn.btn-danger(href=`/cart/delete/:${item.product_id}`) Xóa
+                                        a.btn.btn-danger(href=`/cart/delete/${item.product_id}`) Xóa
                         else 
                             p Không có sản phẩm nào trong giỏ hàng
                 h3.text-right Tổng đơn hàng: #{cartDetail.totalPrice}$
