--- a/views/client/pages/checkout/success.pug
+++ b/views/client/pages/checkout/success.pug
@@ -6,3 +6,65 @@ block main
     .row
       .col-12
         +box-head("Đặt hàng thành công")
+
+  .row
+    .col-12
+      div(class="alert alert-success")
+        | Chúc mừng bạn đã đặt hàng thành công! Chúng tôi sẽ xử lý đơn hàng trong thời gian sớm nhất.
+
+  //- Kiểm tra nếu order có thông tin cá nhân
+  if (order)
+    .row
+      .col-12
+        h4(class="mb-2") Thông tin cá nhân
+        table(class="table table-bordered")
+          tbody
+            if (order.userInfo)
+              tr
+                td Họ tên
+                td
+                  b #{order.userInfo.fullName}
+              tr
+                td Số điện thoại
+                td
+                  b #{order.userInfo.phone}
+              tr
+                td Địa chỉ
+                td
+                  b #{order.userInfo.address}
+            else
+              tr
+                td(colspan="2" class="text-center") No user information available.
+
+    //- Kiểm tra nếu order có sản phẩm
+    .row
+      .col-12
+        h4(class="mb-2 text-uppercase") Thông tin đơn hàng
+        table(class="table table-bordered")
+          thead
+            tr
+              th STT
+              th Ảnh
+              th Tên
+              th Giá
+              th Số lượng
+              th Tổng tiền
+          tbody
+            if (order.products.length > 0)
+              each item, index in order.products
+                tr
+                  td #{index + 1}
+                  td
+                    img(src=item.productInfo.thumbnail, alt=item.productInfo.title, width="80px")
+                  td #{item.productInfo.title}
+                  td #{item.priceNew ? item.priceNew : 0}$ // Check if priceNew is valid
+                  td #{item.quantity}
+                  td #{item.totalPrice ? item.totalPrice : 0}$ // Check if totalPrice is valid
+            else
+              tr
+                td(colspan="6" class="text-center") No products in the order.
+
+    .row
+      .col-12.text-right
+        if (order.products && order.products.length > 0)
+          h3 Tổng đơn hàng: #{order.totalPrice ? order.totalPrice : 0}$
