feature sign up user client

--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -37,4 +37,5 @@ header
                 +sub-menu(layoutProductsCategory, pathProduct) 
             li 
               a(href="/cart") Giỏ hàng (#{miniCart ? miniCart.totalQuantity : 0})
-             
+            li 
+              a(href="/user/register") Đăng ký
