Add login functionality

--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -39,3 +39,5 @@ header
               a(href="/cart") Giỏ hàng (#{miniCart ? miniCart.totalQuantity : 0})
             li 
               a(href="/user/register") Đăng ký
+            li 
+              a(href="/user/login") Đăng nhập 
