--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -2,11 +2,13 @@ include ../mixins/sub-menu.pug
 
 
 header
+  
   .container
     .row.align-items-center
+      
       .col-3.inner-logo
         a(href="/")
-          img(src="/images/starbuck.jpg" alt="Logo")
+          img(src=settingGeneral.logo alt=settingGeneral.websiteName)
       .col-5
         form(
           action="/search"
