--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -14,5 +14,8 @@ html(lang="en")
         block main
         include ../partials/footer.pug
         script(src="/js/script.js") 
+        //- socket IO
+        script(src="/socket.io/socket.io.js") 
+        script(src="/js/socket.js")  
         script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js")  
