--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -41,7 +41,8 @@ header
               a(href="/cart") Giỏ hàng (#{miniCart ? miniCart.totalQuantity : 0})
 
             if(user)
-              
+              li  
+                a(href="/chat") Chat 
 
               li 
                 
