--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -8,7 +8,7 @@ block main
       .col-12
         +box-head("Chat")
 
-    .chat
+    .chat(my-id=user.id)
       .chat-container
         .chat-body
           each chat in chats
