done project at 30.12 stop at chat real-time basic

--- a/public/css/test.css
+++ b/public/css/test.css
@@ -850,3 +850,14 @@ button:hover {
 }
 
 /* ENd chat */
+
+/* Emoji icon */
+.tooltip {
+  visibility: hidden;
+}
+
+.tooltip.shown{
+  visibility: visible;
+  opacity: 1;
+}
+/* end emoji icon */
