--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -15,8 +15,12 @@ html(lang="en")
         include ../partials/footer.pug
         script(src="/js/script.js") 
         //- socket IO
+
+        //- picker emoji
+        script(type="module", src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js") 
+        //- end picker emoji
         script(src="/socket.io/socket.io.js") 
         script(src="/js/socket.js")  
-        script(src="/js/chat.js") 
+        script(type="module" src="/js/chat.js") 
         script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js")  
